--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
         "ext-json": "*",
         "ext-openssl": "*",
         "ext-gmp": "*",
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^3.0"
     },
     "provide": {
-        "psr/simple-cache-implementation": "1.0"
+        "psr/simple-cache-implementation": "3.0"
     },
     "autoload": {
         "psr-4": {
@@ -38,6 +38,13 @@
         "rector/rector": "^2.0"
     },
     "scripts": {
+        "pre-commit": [
+            "vendor/bin/phpcbf",
+            "vendor/bin/phpcs -p",
+            "vendor/bin/phpstan",
+            "vendor/bin/rector --dry-run",
+            "vendor/bin/phpunit"
+        ],
         "test": [
             "vendor/bin/phpunit",
             "vendor/bin/phpcs -p"
