--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
             "vendor/bin/phpunit"
         ],
         "test": [
-            "vendor/bin/phpunit",
+            "vendor/bin/phpunit --no-coverage",
             "vendor/bin/phpcs -p"
         ]
     }
