--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,14 @@
     "description": "PSR-16 simple cache provider based on files.",
     "type": "library",
     "require": {
-        "php": ">=7.4",
+        "php": "^8.2",
         "ext-json": "*",
         "ext-openssl": "*",
         "ext-gmp": "*",
-        "psr/simple-cache": "^1.0"
+        "psr/simple-cache": "^3.0"
     },
     "provide": {
-        "psr/simple-cache-implementation": "1.0"
+        "psr/simple-cache-implementation": "3.0"
     },
     "autoload": {
         "psr-4": {
@@ -32,14 +32,21 @@
     "minimum-stability": "stable",
     "require-dev": {
         "ext-xdebug": "*",
-        "vimeo/psalm": "^3.14",
         "squizlabs/php_codesniffer": "^3.5",
-        "phpunit/phpunit": "^9.4"
+        "phpunit/phpunit": "^11",
+        "phpstan/phpstan": "^2.1",
+        "rector/rector": "^2.0"
     },
     "scripts": {
+        "pre-commit": [
+            "vendor/bin/phpcbf",
+            "vendor/bin/phpcs -p",
+            "vendor/bin/phpstan",
+            "vendor/bin/rector --dry-run",
+            "vendor/bin/phpunit"
+        ],
         "test": [
-            "vendor/bin/phpunit",
-            "vendor/bin/psalm --show-info=true",
+            "vendor/bin/phpunit --no-coverage",
             "vendor/bin/phpcs -p"
         ]
     }
